--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@
 
 /* activities-section-start */
 #activities {
-  padding: 40px 0px;
+  padding: 20px 0px;
 }
 .activities-header h1 {
   text-align: center;
@@ -137,49 +137,20 @@
   font-weight: 600;
   text-shadow: 0px 8px 10px rgba(0, 0, 0, 0.3);
 }
-/* activities-section-end */
 
-/* testimonial */
-
-/* .activities-header h4 {
-  font-family: var(--primary-font);
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 1.1em;
-  color: var(--primary-color);
-  font-weight: 400;
-  text-align: center;
-  margin-bottom: 15px;
-} */
-
-/* .activities-header h1 {
-  font-family: var(--header-font);
-  font-size: 2.5em;
-  color: var(--black);
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 40px;
-} */
 
 .content-area {
   background: var(--white);
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1) !important;
   border-radius: 6px;
-  margin: 10px;
-}
-.content {
-  padding: 20px;
+  /* margin: 10px;   */
 }
 
+
 .img-area p {
-  margin-bottom: 0;
-  text-align: center;
-  color: var(--black);
-  font-family: var(--primary-font);
-  background-color: #eff6ff;
-  margin: 15px;
-  padding: 10px;
-  border-radius: 6px;
+ font-size: 12px;
+  margin-top: 10px;
+ border-radius: 6px;
 }
 
 .img-area img {
@@ -191,12 +162,26 @@
   object-fit: cover;
 }
 
-.img-area h4 {
+
+.img-area a {
   text-align: center;
-  font-size: 1.3em;
-  color: var(--black);
-  font-family: var(--header-font);
+  font-size: 17px;
+text-decoration: none;
   margin-top: 10px;
+  display: block;
+  color: red;
+  font-weight: 500;
+}
+.img-area a:hover{
+  color: red;
+}
+.img-area .read{
+float: left ;
+  font-size: 15px;
+text-decoration: none;
+  margin-top: 10px;
+
+  
 }
 
 .owl-dots {
@@ -224,4 +209,28 @@
   }
 }
 
-/* testimonial */
+/* activities-section-end */
+/* working-and-story-section-start */
+#workandstory{
+  padding: 50px 0px;
+}
+.work-header h1{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    text-shadow: 0px 8px 10px rgba(0, 0, 0, 0.3);
+}
+.work-map img{
+  width: 100%;
+}
+
+.story-header h1{
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  text-shadow: 0px 8px 10px rgba(0, 0, 0, 0.3);
+}
+ /* working-and-story-section-end */
+ /* impacts-section-start */
+
+ /* impacts-section-end */
