--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ text-decoration: none;
   background: var(--white);
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1) !important;
   border-radius: 6px;
-  /* margin: 10px;   */
+ 
 }
 
 
@@ -283,24 +283,109 @@ text-decoration: none;
 }
 .impact-main-area{
   padding: 50px 0px ;
-  background-color: rgb(124, 3, 3);
+  background-color: rgb(99, 3, 3);
 }
 .impact-item{
-  /* width: 100%; */
+
   padding: 50px ;
   border: 1px solid white;
 }
 .impact-item h1{
-  /* margin-left: 15px; */
+ 
   font-size: 50px;
   color: #fff;
   text-align: center;
 }
 .impact-item h2{
-  /* margin-left: 15px;  */
+  
   font-size: 25px !important;
   color: #fff;
   text-align: center;
 }
 
  /* impacts-section-end */
+ /* feedback-section-start */
+#feedback{
+  padding: 20px 0px;
+}
+.feed-header h1{
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  text-shadow: 0px 8px 10px rgba(0, 0, 0, 0.3);
+}
+ .feedback-area {
+  background: var(--white);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 6px;
+ 
+}
+.yourfeed{
+  width: 100%;
+  padding: 60px;
+  /* border: 1px solid black; */
+  position: relative;
+  z-index: -1;
+  box-shadow: 9px 11px 14px 0 rgba(0,0,0,.1);
+}
+.yourfeed p{
+  text-align: center;
+  color: rgb(121, 118, 118);
+}
+.your-info{
+  margin: auto;
+  width: 30%;
+margin-top: -40px;
+  z-index: 1;
+}
+.yourfeed-img{
+  
+  width: 70px;
+  display: block;
+ margin: auto;  
+
+}
+.yourfeed-img img{
+ 
+  border-radius: 50%;
+  top: 0;
+  width: 120px;
+}
+
+.yourfeed-info h3{
+font-size: 18px;
+text-align: center;
+}
+.yourfeed-info p{
+  text-align: center;
+  font-size: 13px;
+}
+
+
+
+.owl-dots {
+  text-align: center;
+  margin-top: 2%;
+}
+
+.owl-dot {
+  width: 10px !important;
+  height: 10px !important;
+  background-color: rgb(180, 178, 178) !important;
+  display: inline-block;
+  margin: 0 5px;
+  border-radius: 50%;
+  opacity: 0.8;
+}
+
+.owl-dot.active {
+  background-color: red !important;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonial-header h1 {
+    font-size: 2em;
+  }
+}
+
+/* feedback-section-end */
