--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,13 @@
 #vision {
   padding: 50px 0px;
 }
-
+.section-header-underline{
+  padding: 2px;
+  width: 110px;
+  margin: auto;
+  background-color: red;
+  border-radius: 20px;
+}
 .vision-header h1 {
   text-align: center;
   font-size: 32px;
